# MesDiscordBot

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  MesDcBot.csproj  MyBot.sln  Program.cs  README.md  compile.sh  cp.sh  users.json
MyBot/: MyBot.vcxproj  MyBot.vcxproj.filters
MyBot/src/: MyBot.cpp
docker/: .dockerignore  DOCKERFILE  docker-compose.yml  entrypoint.sh
include/: CommandHandler.hpp  Match.hpp  Team.hpp  TeamManager.hpp  User.hpp  command_handler.hpp  models.hpp  team_manager.hpp  types.hpp
include/core/: constants.hpp  utils.hpp
include/handlers/: command_handler.hpp  interaction_handler.hpp  session_manager.hpp
include/models/: match.hpp  team.hpp  user.hpp
include/services/: match_service.hpp  persistence_service.hpp  team_service.hpp
include/ui/: embed_builder.hpp  message_builder.hpp  panel_builder.hpp
src/: CommandHandler.cpp  Match.cpp  Team.cpp  TeamManager.cpp  User.cpp  command_handler.cpp  main.cpp  models.cpp  team_manager.cpp
src/handlers/: command_handler.cpp  interaction_handler.cpp  session_manager.cpp
src/services/: match_service.cpp  persistence_service.cpp  team_service.cpp
src/ui/: embed_builder.cpp  panel_builder.cpp
